# MScreen

./: .bazeliskrc  .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE
Docs/RFCs/: RFC-2024-08-21 MicroKernel
Foundation/Kernel/: BUILD
Foundation/Kernel/Sources/: DelegateService.swift  Error.swift  Kernel.swift  MicroKernel.swift  Process.swift  ProcessAssembly.swift  Service.swift  ServiceContainer.swift  ServiceKey.swift
Foundation/Logger/: BUILD
Foundation/Logger/Sources/: Assembly.swift  Logger.swift
Foundation/LoggerProtocol/: BUILD
Foundation/LoggerProtocol/Sources/: LoggerProtocol.swift  SharedLogger.swift
Foundation/Platform/: BUILD
Foundation/Platform/Sources/: Platform.swift  PlatformDelegateService.swift
Foundation/UIFoundation/Controls/SegementedControl/: BUILD
Foundation/UIFoundation/Controls/SegementedControl/Sources/: SegementedControl.swift
Products/MScreen/: BUILD
Products/MScreen/Entrance/: BUILD
Products/MScreen/Entrance/Protos/: dsl.proto
Products/MScreen/Entrance/Sources/: BazelApp.swift  ScreenAppDelegate.swift  ScreenKernel.swift  WidgetGalleryDataProvider.swift  WidgetsGalleryView.swift
Products/MScreen/Entrance/Sources/WidgetContent/: WidgetContent.swift
Products/MScreen/Entrance/Sources/WidgetTags/: WidgetTag.swift
Products/MScreen/Extension/: BUILD
Products/MScreen/Sources/: BazelApp.swift
Products/MScreen/Widgets/: BUILD
Products/MScreen/Widgets/Sources/: AppIntent.swift  Widget.swift  WidgetEntrance.swift
Sources/: BazelApp.swift
ThirdLibraries/CocoaLumberjack/: BUILD
ThirdLibraries/Kingfisher/: BUILD
ThirdLibraries/ObjectMapper/: BUILD
ThirdLibraries/Swinject/: BUILD
