###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_xcodeproj", version = "2.7.0")
bazel_dep(
    name = "apple_support",
    version = "1.15.1",
    repo_name = "build_bazel_apple_support",
)

bazel_dep(
    name = "rules_swift",
    version = "2.1.1",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "rules_apple",
    version = "3.6.0",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)
bazel_dep(name = "rules_proto", version = "6.0.2")


non_module_dependencies = use_extension("//build-systems/bazel-utils:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "SwiftLint")

